style.css
* { margin: 0; border: 0; padding: 0; }
body { margin: 0.5em; overflow-y: scroll; font-family: sans-serif !important; }
.ajaxbusy { cursor: wait !important; }
h2 { margin-bottom: 0.5em; }
form { background-color: #ddf; padding: 0.5em; }
fieldset { border: 0.1em solid #ccc; padding: 0.2em; }
p { margin: 0.5em 0; }

table { border: 0.1em solid #999; width: 100%; border-collapse: collapse; }
tr.rowodd { background-color: #eee; }
tr.roweven { background-color: #ddd; }
th, td { padding: 0.1em; vertical-align: top; white-space: nowrap; }
th { text-align: left; background: #ddd; }
td.description { width: 0.1em; height: 1.5em; }
td.number { text-align: right; }
.center { text-align: center; }
th.wide, td.wide { width: 99%; }
th.small, td.small { width: 1%; }
tr.list:hover { background-color: #ffc; }
tr.list:hover td.nolist { background-color: #ddf; }
td.header { font-weight: bold; }

ul, ol { padding: 0.5em 2.5em; }
ul.compact { margin: 0; padding: 0; overflow: hidden; }
ul.compact li { list-style-type: none; display: inline; margin-right: 1em; }

.integer { width: 2em; text-align: right; }

.referrer { font-size: 0.8em; }
input, textarea, select, option { font-size: 1em; font-family: sans-serif !important; }
input, textarea, option { padding: 0 0.2em; }
input, textarea, select { background-color: #ffe; border: 0.1em solid #999; }
input:focus, select:focus, textarea:focus { background-color: #ffc; }
select { height: 1.35em; }
optgroup { color: #666; background-color: #ddd; font-size: x-small; text-align: center; font-style: normal; }
option { color: #000; background-color: #fff; font-size: medium; text-align: left; }
input.readonly, select.readonly { border-color: #ccc; background-color: #eee; color: #999; }
ul.minimal { margin: 0; padding: 0; }
ul.minimal li { list-style-type: none; }
ul.minimal li .radio { margin-right: 0.3em; }
input.mainsubmit, input.minorsubmit { border: 0.15em solid #fff; border-color: #fff #999 #999 #fff; color: #33f; padding: 0 0.2em; }
input.mainsubmit, input.minorsubmit, .cancel { margin-right: 1em; }
input.mainsubmit:hover, input.minorsubmit:hover { background-color: #090 !important; color: #fff; }
.cancel, .forget { padding: 0.1em 0.5em; }
input.mainsubmit.delete:hover, .cancel:hover, .close:hover, .drop:hover, .forget:hover { background-color: #f00 !important; color: #fff !important; }
input.mainsubmit.delete { margin-left: 5em; }

/* a.ajaxified, input.ajaxified { color: #363; } */
input.minorsubmit.ajaxified { display: none; }
.ajaxcontainer { padding-left: 1em; }
.ajaxproblem { border-color: #c00 !important; }
.ajaxincompatible { background-color: #f90 !important; }
.ajaxwarning { display: none; color: #c00; }

.column { white-space: nowrap; }
.thisrecord { display: none; }

.foreigntable { margin-bottom: 1em; }

.pluralsingular { margin: 0; padding: 0; }
.pluralsingular li { list-style-type: none; white-space: nowrap; }
.pluralsingular label { width: 0.8em; display: inline-block; }
.pluralsingular input { width: 8em; }

.title { width: 8em; }
.presentationname { width: 11em; }

#title { float: left; }
#id { float: right; }
#messages { clear: both; }

.important { font-weight: bold; }

#warnings { padding: 0; }
#warnings li { list-style-type: none; }
div.error, .problem, .warning { font-weight: bold; color: #f00; }
.help { color: #999; margin-left: 0.5em; }

.trace { white-space: nowrap; }

#footer { margin-top: 0.5em; }
#poweredby { float: right; }
.logs { border: 0.1em solid #ccc; background-color: #eee; color: #999; clear: both; white-space: normal; }
.logs>li { margin-bottom: 0.5em; }
.logs ol { padding: 0; margin-left: 1em; }
.logs .queryroot { padding-left: 1em; }
.logs .querymeta { padding-left: 2em; }
.logs .querydata { padding-left: 3em; }
.logs .arrayshow { margin-left: 1em; }
.logs .arrayshow:hover { white-space: pre; }
.logs a { color: #99e; }

//css_presentation goes here

